PreeshaAyansh_deployments/MyIngress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-ingress
  namespace: default
  annotations:
    service.beta.kubernetes.io/aws-load-balancer-scheme: "internet-facing"  # Makes the LoadBalancer internet-facing
    service.beta.kubernetes.io/aws-load-balancer-target-type: "instance"  # Uses EC2 instances as targets
    alb.ingress.kubernetes.io/manage-backend-security-group-rules: "true"
    alb.ingress.kubernetes.io/subnets: 
spec:
  ingressClassName: alb
  rules:
    - host: preeshaayanshtech.co.uk 
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: my-app  # Ensure this service exists
                port:
                  number: 80
